# rdktools

./: .dockerignore  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  main.py  pyproject.toml  test_simple.py  test_tf_op.py
.github/workflows/: build-wheels.yml
docs/: RDKIT.md
examples/: basic_usage.py  example_tf_pipeline.py  performance_benchmark.py
scripts/: build_rdkit.sh
src/: main.cpp
src/cpp/: ecfp_trace.cpp  ecfp_trace.hpp  molecular_ops.cpp  molecular_ops.hpp  pybind_module.cpp  tf_string_op.cpp  tf_string_op.hpp
src/rdktools/: __init__.py  tf_ops.py
src/rdtools/: __init__.py
tests/: test_rdtools.py  test_tf_ops.py
